--- a/src/components/WeatherOverview/WeatherOverview.scss
+++ b/src/components/WeatherOverview/WeatherOverview.scss
@@ -1,4 +1,142 @@
-.WeatherOverviewIcon {
-	width: 328px;
-	height: 328px;
+@import './../../static/css/variables';
+@import './../../static/css/mediaqueries';
+
+.WeatherOverview {
+	display: grid;
+	grid-template-columns: repeat(10, 1fr);
+	grid-template-rows: 2fr;
+	grid-column-gap: 0px;
+	grid-row-gap: 15px;
+	padding: 35px 50px;
+
+	@media #{$phablet-up} {
+		grid-row-gap: 30px;
+	}
+
+	@media #{$tablet-up} {
+		padding: 72px 110px;
+	}
+
+	@media #{$desktop-up} {
+		grid-template-rows: 1fr;
+		padding: 72px 110px;
+		max-width: 1200px;
+		margin: auto;
+	}
+}
+
+.WeatherOverview__forecast {
+	display: flex;
+	justify-content: space-between;
+	grid-area: 1 / 1 / 2 / 11;
+
+	@media #{$desktop-up} {
+		grid-area: 1 / 1 / 2 / 7;
+	}
+}
+
+.WeatherOverview__icon {
+	width: 28%;
+	height: auto;
+}
+
+.WeatherOverview__forcastDetails {
+	min-width: 40%;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(4, 1fr);
+	grid-column-gap: 1px;
+	grid-row-gap: 0px;
+}
+
+.WeatherOverview__forecastSummary {
+	grid-area: 1 / 1 / 2 / 2;
+	display: flex;
+	justify-content: space-between;
+	font-family: $roboto-regular;
+	font-size: 14px;
+	color: $lightGrey;
+
+	@media #{$phablet-up} {
+		font-size: 25px;
+	}
+
+	@media #{$desktop-up} {
+		font-size: 28px;
+	}
+}
+
+.WeatherOverview__temp {
+	grid-area: 2 / 1 / 5 / 2;
+	font-family: $roboto-bold;
+	font-size: 75px;
+	line-height: 75px;
+	color: $white;
+	text-align: center;
+
+	@media #{$phablet-up} {
+		font-size: 120px;
+		line-height: 120px;
+	}
+
+	@media #{$desktop-up} {
+		padding: 0px 14px;
+		font-size: 150px;
+		line-height: 150px;
+	}
+}
+
+.WeatherOverview__detailsContainer {
+	grid-area: 2 / 1 / 3 / 11;
+
+	@media #{$desktop-up} {
+		grid-area: 1 / 8 / 2 / 11;
+	}
+}
+
+.WeatherOverview__details {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(4, 1fr);
+	grid-column-gap: 1px;
+	grid-row-gap: 0px;
+	height: 100%;
+}
+
+.WeatherOverview__city {
+	grid-area: 1 / 1 / 2 / 2;
+	font-family: $roboto-regular;
+	font-size: 14px;
+	color: $lightGrey;
+
+	@media #{$phablet-up} {
+		font-size: 25px;
+	}
+
+	@media #{$desktop-up} {
+		font-size: 28px;
+	}
+}
+
+.WeatherOverview__date {
+	grid-area: 2 / 1 / 5 / 2;
+	font-family: $roboto-bold;
+	font-size: 20px;
+	line-height: 25px;
+	color: $white;
+
+	display: flex;
+	flex-direction: column;
+	padding-top: 4px;
+
+	@media #{$phablet-up} {
+		font-size: 34px;
+		line-height: 46px;
+		padding-top: 12px;
+	}
+
+	@media #{$desktop-up} {
+		font-size: 42px;
+		line-height: 58px;
+	}
 }
