--- a/src/static/css/_variables.scss
+++ b/src/static/css/_variables.scss
@@ -1,7 +1,7 @@
 // default colors
 $white: #ffffff;
 $black: #000000;
-$darkBlue: #3b3f69;
+$darkBlue: #262a59;
 $lightBlue: #51557a;
 $yellow: #ffc700;
 $lightGrey: #a8aabd;
