--- a/src/static/css/_typography.scss
+++ b/src/static/css/_typography.scss
@@ -8,7 +8,13 @@
 	src: url('./../assets/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
 }
 
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
+	min-height: 100%;
 	margin: 0;
 	font-family: $georgia;
 	-webkit-font-smoothing: antialiased;
@@ -17,4 +23,8 @@ body {
 
 code {
 	font-family: monospace;
+}
+
+#root {
+	height: 100%;
 }
