Adds loading and error states.

--- a/src/views/WeatherForecast/WeatherForecast.scss
+++ b/src/views/WeatherForecast/WeatherForecast.scss
@@ -33,3 +33,17 @@
 		background-color: $lightBlue;
 	}
 }
+
+.WeatherForecast__loadingIndicator {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.WeatherForecast__error {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
