--- a/src/static/css/_variables.scss
+++ b/src/static/css/_variables.scss
@@ -1,4 +1,4 @@
-// default colors
+// Colors
 $white: #ffffff;
 $black: #000000;
 $darkBlue: #262a59;
@@ -7,6 +7,7 @@ $yellow: #ffc700;
 $lightGrey: #a8aabd;
 $grey: #999999;
 
+// Fonts
 $georgia: 'Georgia', serif;
 $roboto-regular: 'Roboto Regular', 'serif';
 $roboto-bold: 'Roboto Bold', 'serif';
